Revision history for Perl extension List::Any/List::MoreUtils.

0.27_02 Wed 1 Dec 2010
	- Reduced test suite peak memory consumption by 5-10 meg
	- Added the 'distinct' alias for the uniq function, for people that
	  like their chained map/grep/sort pipelines with a SQL'ish flavour.

0.27_01 Wed 1 Dec 2010
	- Refactored the split test scripts into a common test module
	  to be shared between both the Perl and XS versions.
	- Reapply fix for http://rt.cpan.org/Ticket/Display.html?id=39847
	  "minmax error: unpredictable results with lists of 1 element"

0.26 Tue 23 Nov 2010
	- No changes
	- Some parts of the CPAN cloud were confusing my 0.24
	  release with the older deleted 0.24. Bumping version
	  past Tassilo's to clarify things.

0.24 Mon 22 Nov 2010
	- No changes, switching to a production version

0.23_01 Sat 25 Sep 2010
	- First attempt at repackaging the List::MoreUtils code in
	  Makefile.PL and release toolchain similar to Params::Util

0.22  Sun Jul  2 11:25:39 EDT 2006
	- SvPV_nolen doesn't exist on pre 5.6 perls

0.21  Sun Jun 18 07:59:06 EDT 2006
	- propagate dies from inside the code-reference of pairwise to 
	  caller

0.20  Tue Apr 25 15:43:57 EDT 2006
	- part() would destroy the list elements when changing
	  an array in place (@list = part { ... } @list)

0.19  Mon Mar 13 19:07:37 CET 2006
	- working down myself the queue of suggestions:
	  part() added
	  (Ricardo SIGNES <rjbs AT cpan DOT org>)

0.18  Sat Feb 25 08:55:48 CET 2006
	- each_arrayref (XS) couldn't deal with refs to list literals
	  (brought up by David Filmer <usenet AT DavidFilmer DOT com>
	   in comp.lang.perl.misc)

0.17  Wed Dec  7 10:45:43 CET 2005
	- each_arrayref had no XS implementation and wasn't
	  mentioned in the PODs
	  (patch by Anno Siegel <siegel AT zrz DOT tu-berlin DOT de>)

0.16  Mon Nov 14 09:57:28 CET 2005
	- a dangling semicolon in some macros prevented
	  the XS portion to compile on some compilers
	  (Lars Thegler <lars AT thegler DOT dk>)
